[gd_scene load_steps=4 format=3 uid="uid://dvgfkovckchyd"]

[ext_resource type="Script" path="res://controls/CameraRig.gd" id="1_rylmo"]
[ext_resource type="Script" path="res://units/components/VelocityComponent.gd" id="2_yobrm"]

[sub_resource type="Environment" id="Environment_iy72c"]
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.15
fog_light_color = Color(0.780392, 0.827451, 0.909804, 1)
fog_light_energy = 2.25
fog_density = 0.001
fog_height = 11.15
fog_height_density = -0.3516

[node name="CameraRig" type="Node3D"]
script = ExtResource("1_rylmo")
camera_scroll_speed = 2.0

[node name="CameraRotation" type="Node3D" parent="."]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)

[node name="CameraAngle" type="Node3D" parent="CameraRotation"]
transform = Transform3D(1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0)

[node name="CameraDistance" type="Node3D" parent="CameraRotation/CameraAngle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15)

[node name="Camera3D" type="Camera3D" parent="CameraRotation/CameraAngle/CameraDistance"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
environment = SubResource("Environment_iy72c")
fov = 106.162

[node name="AudioListener3D" type="AudioListener3D" parent="CameraRotation/CameraAngle/CameraDistance/Camera3D"]
current = true

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("2_yobrm")
